      we haven't failed a threshold number of times yet.
    - Delay retrying consensus downloads while we're downloading
      certificates to verify the one we just got.  Also, count getting a
      consensus that we already have (or one that isn't valid) as a failure,
      and count failing to get the certificates after 20 minutes as a
      failure.

  o Minor features (router descriptor cache):
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from
      when we upgraded to 0.2.0.8-alpha. Remove it. It has no good
      routers anyway.
    - When we (as a cache) download a descriptor because it was listed
      in a consensus, remember when the consensus was supposed to expire,
      and don't expire the descriptor until then.

  o Minor features (performance):
    - Call routerlist_remove_old_routers() much less often. This should
      speed startup, especially on directory caches.
    - Don't try to launch new descriptor downloads quite so often when we
      already have enough directory information to build circuits.
    - Base64 decoding was actually showing up on our profile when parsing
      the initial descriptor file; switch to an in-process all-at-once
      implementation that's about 3.5x times faster than calling out to
      OpenSSL.

  o Minor features (compilation):
    - Detect non-ASCII platforms (if any still exist) and refuse to
      build there: some of our code assumes that 'A' is 65 and so on.

  o Minor bugfixes (v3 directory authorities, bugfixes on 0.2.0.x):
    - Make the "next period" votes into "current period" votes immediately
      after publishing the consensus; avoid a heisenbug that made them
      stick around indefinitely.
    - When we discard a vote as a duplicate, do not report this as
      an error.
    - Treat missing v3 keys or certificates as an error when running as a
      v3 directory authority.